# dotfiles

./: .gchi  .gitconfig  .tmux.conf  .tmux.conf.backup  .wezterm.lua  README.md  color.sh  colors.d  dark.tmux.conf  jjconfig.toml  kanata.kbd  light.tmux.conf  light.wezterm.lua  settings.json  starship.toml  vimium.css
.nvim/: init.lua
.nvim/lua/: lspbindings.lua
alacritty/: alacritty.toml
bat/: config
delta/: themes.gitconfig
fish/: config.fish  fish_plugins  fish_variables
fish/completions/: jj.fish
fish/functions/: _fzf_preview_file.fish  amicharging.fish  fd.fish  fzf.fish  git.fish  ll.fish  llg.fish  ls.fish  see.fish  spt.fish  t.fish
fuzzel/: fuzzel.ini  open_pdf.sh
ghostty/: config
min_nvim/: init.lua
min_nvim/lua/: sys.lua
misc/: gotop.d
navi/sheets/: misc.cheat
niri/: config.kdl  keybinds.kdl
nvim/: init.lua  lazy-lock.json
nvim_min/: init.lua
rofi/: config.rasi  theme.light.rasi  theme.rasi
scripts/: open_in_editor  pmp  snn.sh  tmux-notiy.sh
scripts/pyscripts/: pyproject.toml  scripts.json
scripts/pyscripts/src/meta_tools/: __init__.py  run_script.py
scripts/pyscripts/src/tmux_tools/: __init__.py  _util.py  break_pane.py  join_pane_to_window.py  kill_session.py  layout_picker.py  move_window_to_session.py  pick_pane.py  pick_session.py  pick_window.py  workspace_detach.py  workspace_session.py  workspace_window.py
sway/: borders.d  colors.d  custom-bar.d  input.d  light_borders.d  sway.d  swaylock_config  swaynag.d  test.py
waybar/: config.jsonc  style.css
wofi/: config  style.css
zsh/: .zshrc
(+156 files in other folders)
